# AdaptiveLatents

./: .gitignore  README.md  adaptive_latents_config.yaml  bw_config.yaml  environment.yml  pyproject.toml
adaptive_latents/: __init__.py  adaptive_latents_config.yaml  bubblewrap.py  bw_run.py  config.py  default_parameters.py  ica.py  jpca.py  plotting_functions.py  prediction_regression_run.py  predictor.py  pro_pls.py  profiling_functions.py  prosvd.py  regressions.py  stim_regressor.py  timed_data_source.py  transformer.py  utils.py  vjf.py
adaptive_latents/input_sources/: __init__.py  autoregressor.py  data_sources.py  datasets.py  functional.py  hmm_simulation.py  jpca.py  kalman_filter.py  lds_simulation.py  timed_data_source.py  utils.py
adaptive_latents/stimulation/: photostimulation.py  toy.ipynb  toyprediction.ipynb
adaptive_latents/transforms/: __init__.py  ica.py  jpca.py  proSVD.py  prosvd.py  transformer.py  utils.py
bubblewrap/: bw_run.py  config.py  default_parameters.py  plotting_functions.py  regressions.py
bubblewrap/input_sources/: __init__.py  functional.py  hmm_simulation.py
notebooks/: BW_metric.ipynb  MWE_fish_phtostim.ipynb  Neuro530.ipynb  adaptive_latents_config.yml  bubblewrap_demo.ipynb  data_explorer.ipynb  dataset_plots.ipynb  distance_fish_photostim.ipynb  fish_stim.ipynb  intro_to_framework.ipynb  latents_exploration.ipynb  profiling.ipynb  regressions.ipynb  stim_trajectories.ipynb  toy.ipynb  toypred_stim.ipynb  trajectory_animation.ipynb  try_out_mmica.ipynb
scripts/: angle_math.ipynb  bubblewrap_demo.ipynb  bw_challenge_recover.ipynb  dataset_plots.ipynb  datasets.py  generate_predictions.py  icca.ipynb  latents_exploration.ipynb  main.py  make_profiling_figure.py  new-regressions.ipynb  optim.py  optuna.ipynb  profiling.ipynb  refresh_conda.sh  regressions.ipynb  replicate_rios_thing.ipynb  streaming_jpca.ipynb  svd.ipynb  visualization_maker.ipynb
scripts/debug jax/: on_cpu.ipynb  on_cpu.py  replicate_rios_thing.ipynb  run_example.ipynb  run_example.py  run_partial_finish.py  run_partial_start.py  switch_runtimes.ipynb
scripts/optim/: main.py
scripts/temp_for_rio/: tempNMCWMC.ipynb
tests/: conftest.py  smoke_test.py  test_data_sources.py  test_default_parameters.py  test_general_functions.py  test_ica.py  test_input_sources.py  test_jpca.py  test_local_code.py  test_plotting_functions.py  test_predictors.py  test_proSVD.py  test_profiling.py  test_profiling_functions.py  test_regressors.py  test_scripts.py  test_speed.py  test_transforms.py  test_workspace_code.py
tests/test_transforms/: test_bubblewrap.py  test_dim_red_methods.py  test_transforms.py  test_transforms_in_general.py  test_util_transformers.py
workspace/: convergence_plots.ipynb  datasets.py  fish stimulation responses.ipynb  latent_space_responses.ipynb  leventhal_scratch.ipynb  leventhal_script.py  main.py  make_profiling_figure.py  nauman24u_scratch.ipynb  naumann_utility_functions.py  prediction_regression_pipeline.py  prediction_regression_run.py  profiling.ipynb  sfn_figures.ipynb  sfn_figures_fish.ipynb  sfn_figures_monkey.ipynb  sfn_results.ipynb  show_off_algorithms.ipynb  use_transformers.py  zong22.ipynb
workspace/day-notebooks/: 25-01-10.ipynb  25-01-14.ipynb  25-01-23.ipynb  25-01-30.ipynb  25-02-04.ipynb  25-02-07.ipynb  25-02-11.ipynb  25-02-19.ipynb  25-03-17.ipynb  25-03-19.ipynb  VJF.ipynb
workspace/demos/: demo_01.py  demo_02.py  demo_02_custom_data.py  demo_03.py  demo_04.py  demo_05.py  demo_05_prediction.py  demo_06.py  demo_06_predicting_behavior.py  demo_07.py  demo_07_custom_components.py
workspace/pato_stim/: MWE_fish_phtostim.ipynb  photostimulation.py  toypred_stim.ipynb
