[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_latents"
version = "0.0.1"
description = "Methods for real-time prediction of latent neural dynamics"
authors = [{name = "Jonathan Gould", email = "jngould@umich.edu"},
           {name = "Anne Draelos", email = "adraelos@umich.edu"}]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["neuroscience", "prediction", "dynamics"]
dependencies = [] # todo: might be able to migrate pyproject.toml to requirements.txt and then use dynamic metadata?


[tool.setuptools]
packages = ["adaptive_latents"]

[tool.distutils.egg_info]
egg_base = "dist"

[tool.coverage.html]
directory = "cov_html"

[tool.pytest.ini_options]
addopts = """--cov-report=html:./tests/reports/coverage-html \
--cov-report=xml:./tests/reports/coverage.xml \
"""

testpaths = [
    "tests",
]
