[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_latents"
version = "0.0.1"
description = "Methods for real-time prediction of latent neural dynamics"
authors = [{name = "Jonathan Gould", email = "jngould@umich.edu"},
           {name = "Anne Draelos", email = "adraelos@umich.edu"}]
            #TODO: Pato?
readme = "README.md"
requires-python = ">=3.7"
keywords = ["neuroscience", "prediction", "dynamics"]
dependencies = [] # todo: might be able to migrate pyproject.toml to requirements.txt and then use dynamic metadata?

[tool.pytest.ini_options]
pythonpath = [
  "." # so we can import from the scripts in the tests; you should still install adaptive_latents as a package
]

[tool.setuptools]
packages = ["adaptive_latents"]


[tool.coverage.run]
include = [
    "adaptive_latents/**/*.py",
    "tests/**/*.py",
    ]

[tool.coverage.html]
directory = "./tests/reports/coverage-html"

[tool.coverage.xml]
output = "./tests/reports/coverage.xml"